# Dashly

./: README.md  demo_sales.csv  main.py  pyproject.toml  tg_bot.py
src/: __init__.py  analyzer.py  api.py  dashboard.py  data.py  schemas.py
